--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #028900;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="../index.html">
           <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;">
           Siete Sopas
         </a>
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
             <li class="nav-item"><a class="nav-link" href="menu.html">MENÚ</a></li>
             <li class="nav-item"><a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a></li>
             <li class="nav-item"><a class="nav-link active" href="contactanos.html">CONTÁCTANOS</a></li>
