--- a/html/visitanos.html
+++ b/html/visitanos.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(2, 141, 0);">
     <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <a class="navbar-brand d-flex align-items-center" href="../index.html">
         <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
         <span class="fw-bold text-white">Siete Sopas</span>
       </a>
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">INICIO</a>
+            <a class="nav-link" href="../index.html">INICIO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="menu.html">MENU</a>
