--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <a class="nav-link active" href="index.html">INICIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="menu.html">MENU</a>
+            <a class="nav-link" href="/html/menu.html">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a>
+            <a class="nav-link" href="/html/contactanos.html">SOBRE NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactanos.html">CONTACTANOS</a>
+            <a class="nav-link" href="/html/contactanos.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
