--- a/contactanos.html
+++ b/contactanos.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contáctanos - Siete Sopas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/contacto_nuevo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/contacto_nuevo.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #028900;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;">
+          <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
           Siete Sopas
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -19,10 +19,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-            <li class="nav-item"><a class="nav-link" href="menu.html">MENÚ</a></li>
-            <li class="nav-item"><a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a></li>
-            <li class="nav-item"><a class="nav-link active" href="contactanos.html">CONTÁCTANOS</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">MENÚ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="contacto_nuevo.html">CONTACTANOS</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -52,10 +60,10 @@
         <h2 class="text-center text-success">Síguenos en Redes Sociales</h2>
         <div class="d-flex justify-content-center">
           <a href="https://www.instagram.com/sietesopas/" target="_blank">
-            <img src="/imagenes/instagram.jpeg" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;">
+            <img src="/imagenes/instagram.jpeg" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
           <a href="https://www.facebook.com/SieteSopas/" target="_blank">
-            <img src="/imagenes/facebook.jpeg" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;">
+            <img src="/imagenes/facebook.jpeg" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
         </div>
       </section>
@@ -65,11 +73,11 @@
         <form action="enviar_consulta.php" method="POST">
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" required>
+            <input type="text" class="form-control" id="nombre" name="nombre" required />
           </div>
           <div class="mb-3">
             <label for="correo" class="form-label">Correo Electrónico</label>
-            <input type="email" class="form-control" id="correo" name="correo" required>
+            <input type="email" class="form-control" id="correo" name="correo" required />
           </div>
           <div class="mb-3">
             <label for="mensaje" class="form-label">Mensaje</label>
