--- a/contactanos.html
+++ b/contactanos.html
@@ -60,10 +60,10 @@
         <h2 class="text-center text-success">Síguenos en Redes Sociales</h2>
         <div class="d-flex justify-content-center">
           <a href="https://www.instagram.com/sietesopas/" target="_blank">
-            <img src="/imagenes/instagram.jpeg" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;" />
+            <img src="/imagenes/instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
           <a href="https://www.facebook.com/SieteSopas/" target="_blank">
-            <img src="/imagenes/facebook.jpeg" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;" />
+            <img src="/imagenes/facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
         </div>
       </section>
