--- a/menu.html
+++ b/menu.html
@@ -139,7 +139,7 @@
 
           <div class="menu-container" id="pastas">
             <div class="card menu-item">
-              <img src="/imagenes/fetuccini.jpg" class="card-img-top menu-img" alt="Fettucini a lo Alfredo">
+              <img src="imagenes/fetuccini.jpg" class="card-img-top menu-img" alt="Fettucini a lo Alfredo">
               <div class="card-body">
                 <h5 class="card-title">Fettucini a lo Alfredo</h5>
                 <p class="card-text">Pasta bañada en cremosa salsa Alfredo de queso parmesano y mantequilla, servida con pan al ajo.</p>
