--- a/contactanos.html
+++ b/contactanos.html
@@ -46,11 +46,11 @@
         <h2 class="text-center text-success">Información de Contacto</h2>
         <div class="row">
           <div class="col-md-6">
-            <h4>📞 Teléfono</h4>
+            <h4>Teléfono</h4>
             <p>+51 1 2700002</p>
           </div>
           <div class="col-md-6">
-            <h4>📧 Correo Electrónico</h4>
+            <h4>Correo Electrónico</h4>
             <p>contacto@sietesopas.com</p>
           </div>
         </div>
@@ -60,10 +60,10 @@
         <h2 class="text-center text-success">Síguenos en Redes Sociales</h2>
         <div class="d-flex justify-content-center">
           <a href="https://www.instagram.com/sietesopas/" target="_blank">
-            <img src="/imagenes/instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;" />
+            <img src="imagenes/instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
           <a href="https://www.facebook.com/SieteSopas/" target="_blank">
-            <img src="/imagenes/facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;" />
+            <img src="imagenes/facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin: 0 10px;" />
           </a>
         </div>
       </section>
