--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/caldogallina.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/caldogallina.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/carrusel.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/carrusel.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/carrusel3.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/carrusel3.png" class="d-block w-100" alt="...">
         </div>
       </div>
 
