--- a/menu.html
+++ b/menu.html
@@ -6,13 +6,13 @@
     <link rel="icon" href="imagenes/Logo de 7 sopas.jpg">
     <title>Menú del Restaurante</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="css/menu.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(2, 141, 0);">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;">
+          <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;">
           <span class="fw-bold text-white">Siete Sopas</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -147,7 +147,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/fetucciniverde.jpg" class="card-img-top menu-img" alt="Fettucinis Verdes con Milanesa">
+              <img src="imagenes/fetucciniverde.jpg" class="card-img-top menu-img" alt="Fettucinis Verdes con Milanesa">
               <div class="card-body">
                 <h5 class="card-title">Fettucinis Verdes con Milanesa</h5>
                 <p class="card-text">Pasta al pesto tradicional con filete de pollo empanizado, acompañada de papas doradas.</p>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/tallarinlomosaltado.jpg" class="card-img-top menu-img" alt="Tallarín a la Huancaína con Lomo Saltado">
+              <img src="imagenes/tallarinlomosaltado.jpg" class="card-img-top menu-img" alt="Tallarín a la Huancaína con Lomo Saltado">
               <div class="card-body">
                 <h5 class="card-title">Tallarín a la Huancaína con Lomo Saltado</h5>
                 <p class="card-text">Fideos bañados en salsa huancaína cremosa con jugoso lomo saltado al wok, mezcla perfecta de sabores peruanos.</p>
@@ -163,7 +163,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/salsachampinones.jpg" class="card-img-top menu-img" alt="Fettucini en salsa de champiñones">
+              <img src="imagenes/salsachampinones.jpg" class="card-img-top menu-img" alt="Fettucini en salsa de champiñones">
               <div class="card-body">
                 <h5 class="card-title">Fettucini en salsa de champiñones</h5>
                 <p class="card-text">Fettuccini en suave salsa de champiñones frescos y crema, con toque de parmesano rallado.</p>
@@ -176,7 +176,7 @@
       </section>
     </div>
 
-    <script src="/js/menu.js"></script>
+    <script src="js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
