--- a/visitanos.html
+++ b/visitanos.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nosotros - Siete Sopas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/visitanos.css" />
+    <link rel="stylesheet" href="css/visitanos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(2, 141, 0);">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
+          <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
           <span class="fw-bold text-white">Siete Sopas</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -37,7 +37,7 @@
     </nav>
 
     <header class="bg-danger text-white py-5 text-center">
-      <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" id="logo" class="img-fluid mb-3" style="max-width: 150px;" />
+      <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" id="logo" class="img-fluid mb-3" style="max-width: 150px;" />
       <h1 class="display-4">Restaurante Siete Sopas</h1>
     </header>
 
@@ -47,7 +47,7 @@
         <p>
           Desde nuestros humildes comienzos, <strong>Siete Sopas</strong> ha sido un referente en la gastronomía peruana, ofreciendo platos tradicionales con un toque único. Fundado en 2016, nuestro objetivo siempre ha sido proporcionar a nuestros clientes una experiencia culinaria excepcional.
         </p>
-        <img src="/imagenes/historia.jpeg" alt="Historia de Siete Sopas" class="img-fluid rounded shadow mb-4" />
+        <img src="imagenes/historia.jpeg" alt="Historia de Siete Sopas" class="img-fluid rounded shadow mb-4" />
       </section>
 
       <section id="mision-vision" class="mb-5">
@@ -66,7 +66,7 @@
 
       <section id="valores" class="mb-5">
         <h2 class="text-center text-success">Valores</h2>
-        <img src="/imagenes/valores.jpg" alt="Propuesta única de Siete Sopas" class="img-fluid rounded shadow mb-3" />
+        <img src="imagenes/valores.jpg" alt="Propuesta única de Siete Sopas" class="img-fluid rounded shadow mb-3" />
         <ul class="list-group">
           <li class="list-group-item"><strong>Calidad:</strong> Compromiso con la frescura y excelencia de nuestros ingredientes.</li>
           <li class="list-group-item"><strong>Tradición:</strong> Respetamos las recetas ancestrales de la gastronomía peruana.</li>
@@ -78,7 +78,7 @@
       <section id="propuesta" class="mb-5">
         <h2 class="text-center text-success">Nuestra Propuesta Única</h2>
         <p>En <strong>Siete Sopas</strong>, cada plato es preparado con ingredientes frescos y de alta calidad, con un toque especial que solo nuestros chefs conocen. ¿Nuestra receta secreta? El amor y la dedicación con la que preparamos cada sopa, asegurando que cada bocado sea una experiencia inolvidable.</p>
-        <img src="/imagenes/propuesta.jpeg" alt="Propuesta de Siete Sopas" class="img-fluid rounded shadow mb-3" />
+        <img src="imagenes/propuesta.jpeg" alt="Propuesta de Siete Sopas" class="img-fluid rounded shadow mb-3" />
       </section>
 
       <section id="locales" class="mb-5">
@@ -91,7 +91,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6ctdBU1PatNz_wwD2kVLmB6_87Dwsw1M&callback=initMap" async defer></script>
-    <script src="/js/api.js"></script>
+    <script src="js/api.js"></script>
   </body>
 </html>
 
