--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
 
     <div id="animated-bg"></div>
     <header>
-      <img src="/imagenes/logo.jpg" alt="Logo del restaurante">
+      <img src="imagenes/logo.jpg" alt="Logo del restaurante">
       <h1>Carta</h1>
     </header>
 
@@ -53,7 +53,7 @@
 
           <div class="menu-container" id="sanguches">
             <div class="card menu-item">
-              <img src="/imagenes/pavolena.jpg" class="card-img-top menu-img" alt="Pavo a la leña">
+              <img src="imagenes/pavolena.jpg" class="card-img-top menu-img" alt="Pavo a la leña">
               <div class="card-body">
                 <h5 class="card-title">Pavo a la leña</h5>
                 <p class="card-text">Jugoso pavo cocido lentamente a la leña, servido en pan artesanal con cebolla caramelizada y suave mayonesa casera.</p>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/lechonlena.jpg" class="card-img-top menu-img" alt="Lechón a la leña">
+              <img src="imagenes/lechonlena.jpg" class="card-img-top menu-img" alt="Lechón a la leña">
               <div class="card-body">
                 <h5 class="card-title">Lechón a la leña</h5>
                 <p class="card-text">Tiernas láminas de lechón dorado al horno de leña, acompañadas de camote glaseado y salsa criolla en pan artesanal.</p>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/pollodeslichado.jpg" class="card-img-top menu-img" alt="Pollo deshilachado">
+              <img src="imagenes/pollodeslichado.jpg" class="card-img-top menu-img" alt="Pollo deshilachado">
               <div class="card-body">
                 <h5 class="card-title">Pollo deshilachado</h5>
                 <p class="card-text">Pollo desmenuzado con lechuga fresca, tomate y cremosa mayonesa, servido en pan artesanal recién horneado.</p>
@@ -77,7 +77,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/panchicharron.jpg" class="card-img-top menu-img" alt="Pan con Chicharron">
+              <img src="imagenes/panchicharron.jpg" class="card-img-top menu-img" alt="Pan con Chicharron">
               <div class="card-body">
                 <h5 class="card-title">Pan con Chicharrón</h5>
                 <p class="card-text">Crujiente chicharrón de cerdo con camote frito y salsa criolla tradicional, en pan francés crocante.</p>
@@ -96,7 +96,7 @@
 
           <div class="menu-container" id="platos">
             <div class="card menu-item">
-              <img src="/imagenes/lomosaltado.jpg" class="card-img-top menu-img" alt="Lomo Saltado">
+              <img src="imagenes/lomosaltado.jpg" class="card-img-top menu-img" alt="Lomo Saltado">
               <div class="card-body">
                 <h5 class="card-title">Lomo Saltado</h5>
                 <p class="card-text">Carne salteada con cebolla, tomate y papas fritas, acompañada de arroz blanco.</p>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/pollosaltado.jpg" class="card-img-top menu-img" alt="Pollo Saltado">
+              <img src="imagenes/pollosaltado.jpg" class="card-img-top menu-img" alt="Pollo Saltado">
               <div class="card-body">
                 <h5 class="card-title">Pollo Saltado</h5>
                 <p class="card-text">Trozos de pollo salteados al wok con cebolla, tomate y papas doradas, acompañados de arroz blanco.</p>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/pollobroaster.jpg" class="card-img-top menu-img" alt="Pollo Broster con Chaufa">
+              <img src="imagenes/pollobroaster.jpg" class="card-img-top menu-img" alt="Pollo Broster con Chaufa">
               <div class="card-body">
                 <h5 class="card-title">Pollo Broster con Chaufa</h5>
                 <p class="card-text">Pollo broster crocante servido con arroz chaufa al estilo oriental y toque de sillao.</p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card menu-item">
-              <img src="/imagenes/milanesa.jpg" class="card-img-top menu-img" alt="Milanesa de Pollo Bien Pobre">
+              <img src="imagenes/milanesa.jpg" class="card-img-top menu-img" alt="Milanesa de Pollo Bien Pobre">
               <div class="card-body">
                 <h5 class="card-title">Milanesa de Pollo Bien Pobre</h5>
                 <p class="card-text">Filete de pollo empanizado acompañado de arroz, papas fritas y plátano frito, con ensalada fresca.</p>
