--- a/visitanos.html
+++ b/visitanos.html
@@ -47,7 +47,7 @@
         <p>
           Desde nuestros humildes comienzos, <strong>Siete Sopas</strong> ha sido un referente en la gastronomía peruana, ofreciendo platos tradicionales con un toque único. Fundado en 2016, nuestro objetivo siempre ha sido proporcionar a nuestros clientes una experiencia culinaria excepcional.
         </p>
-        <img src="imagenes/historia.jpeg" alt="Historia de Siete Sopas" class="img-fluid rounded shadow mb-4" />
+        <img src="imagenes/historia.jpg" alt="Historia de Siete Sopas" class="img-fluid rounded shadow mb-4" />
       </section>
 
       <section id="mision-vision" class="mb-5">
@@ -78,7 +78,7 @@
       <section id="propuesta" class="mb-5">
         <h2 class="text-center text-success">Nuestra Propuesta Única</h2>
         <p>En <strong>Siete Sopas</strong>, cada plato es preparado con ingredientes frescos y de alta calidad, con un toque especial que solo nuestros chefs conocen. ¿Nuestra receta secreta? El amor y la dedicación con la que preparamos cada sopa, asegurando que cada bocado sea una experiencia inolvidable.</p>
-        <img src="imagenes/propuesta.jpeg" alt="Propuesta de Siete Sopas" class="img-fluid rounded shadow mb-3" />
+        <img src="imagenes/propuesta.jpg" alt="Propuesta de Siete Sopas" class="img-fluid rounded shadow mb-3" />
       </section>
 
       <section id="locales" class="mb-5">
