--- a/contactanos.html
+++ b/contactanos.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contáctanos - Siete Sopas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/contacto_nuevo.css" />
+    <link rel="stylesheet" href="css/contactanos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #028900;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="/imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
+          <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
           Siete Sopas
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
