--- a/contactanos.html
+++ b/contactanos.html
@@ -9,32 +9,26 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #028900;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
-          Siete Sopas
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="menu.html">MENÚ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contacto_nuevo.html">CONTACTANOS</a>
-            </li>
-          </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="d-flex justify-content-between w-100">
+      <div class="d-flex">
+        <a class="nav-link" href="index.html">INICIO</a>
+        <a class="nav-link" href="menu.html">MENÚ</a>
       </div>
-    </nav>
+      <a class="navbar-brand" href="index.html" style="display: flex; align-items: center;">
+        <img src="imagenes/logo.jpg" alt="Logo de Siete Sopas" style="height: 40px; width: 40px; object-fit: cover; border-radius: 50%; margin-right: 10px;" />
+        Siete Sopas
+      </a>
+      <div class="d-flex">
+        <a class="nav-link" href="visitanos.html">SOBRE NOSOTROS</a>
+        <a class="nav-link active" href="contacto_nuevo.html">CONTACTANOS</a>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
+
 
     <header class="bg-danger text-white text-center py-5">
       <h1 class="display-4">Contáctanos</h1>
